--- a/app/build.gradle
+++ b/app/build.gradle
@@ -42,13 +42,30 @@ dependencies {
     implementation 'androidx.navigation:navigation-ui-ktx:2.3.0'
 
     //Firebase dependencies
-    implementation 'com.google.firebase:firebase-core:17.2.3'
-    implementation 'com.google.firebase:firebase-auth:19.2.0'
+    implementation 'com.google.firebase:firebase-core:17.4.4'
+    implementation 'com.google.firebase:firebase-auth:19.3.2'
     implementation 'com.google.firebase:firebase-storage-ktx:19.1.1'
-    implementation 'com.google.firebase:firebase-database-ktx:19.2.1'
-    implementation 'com.google.firebase:firebase-messaging:20.1.2'
+    implementation 'com.google.firebase:firebase-database-ktx:19.3.1'
+    implementation 'com.google.firebase:firebase-messaging:20.2.3'
 
-    testImplementation 'junit:junit:4.12'
+    //circular image view library for profile pictures
+    implementation 'de.hdodenhof:circleimageview:2.2.0'
+
+    //Image loading library
+    implementation 'com.squareup.picasso:picasso:2.71828'
+
+    //card view
+    implementation 'androidx.cardview:cardview:1.0.0'
+
+    //Material Edit Text library
+    implementation 'com.rengwuxian.materialedittext:library:2.1.4'
+
+    //Retrofit
+    implementation 'com.squareup.retrofit2:retrofit:2.9.0'
+    implementation 'com.squareup.retrofit2:converter-gson:2.3.0'
+    implementation 'androidx.legacy:legacy-support-v4:1.0.0'
+
+    testImplementation 'junit:junit:4.13'
     androidTestImplementation 'androidx.test.ext:junit:1.1.1'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
 
