--- a/app/build.gradle
+++ b/app/build.gradle
@@ -51,6 +51,9 @@ dependencies {
     //circular image view library for profile pictures
     implementation 'de.hdodenhof:circleimageview:2.2.0'
 
+    //viewpager2 & tablayout
+    implementation "com.google.android.material:material:1.3.0-alpha02"
+
     //Image loading library
     implementation 'com.squareup.picasso:picasso:2.71828'
 
